--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,8 @@ file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\
 file.reference.jbox2d-library-2.1.2-alpha-v2.jar=lib\\jbox2d-library-2.1.2-alpha-v2.jar
 file.reference.lwjgl.jar-1=lib\\lwjgl.jar
 file.reference.slick.jar-1=lib\\slick.jar
+file.reference.TWL.jar=lib\\TWL.jar
+file.reference.xpp3-1.1.4c.jar=lib\\xpp3-1.1.4c.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -40,7 +42,9 @@ javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
     ${file.reference.lwjgl.jar-1}:\
     ${file.reference.slick.jar-1}:\
-    ${file.reference.jbox2d-library-2.1.2-alpha-v2.jar}
+    ${file.reference.jbox2d-library-2.1.2-alpha-v2.jar}:\
+    ${file.reference.TWL.jar}:\
+    ${file.reference.xpp3-1.1.4c.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
