--- a/nbproject/configs/JWS_generated.properties
+++ b/nbproject/configs/JWS_generated.properties
@@ -1,2 +1,5 @@
 $label=Web Start
+$target.debug=jws-debug
+$target.run=jws-run
+compile.on.save.unsupported.javawebstart=true
 run.jvmargs=-Xms32m -DJava.library.path = "."
