Watermelons and controller support

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
 file.reference.jbox2d-library-2.1.2-alpha-v2.jar=lib\\jbox2d-library-2.1.2-alpha-v2.jar
+file.reference.jinput.jar=lib\\jinput.jar
 file.reference.lwjgl.jar-1=lib\\lwjgl.jar
 file.reference.natives-win32.jar=lib\\natives-win32.jar
 file.reference.slick.jar-1=lib\\slick.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.jbox2d-library-2.1.2-alpha-v2.jar}:\
     ${file.reference.TWL.jar}:\
     ${file.reference.xpp3-1.1.4c.jar}:\
-    ${file.reference.natives-win32.jar}
+    ${file.reference.natives-win32.jar}:\
+    ${file.reference.jinput.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -91,7 +93,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms32m
+run.jvmargs=-Xms32m -Djava.library.path=lib/natives-win32
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
