Fixed native libs for jinput

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,9 @@ file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
 file.reference.jbox2d-library-2.1.2-alpha-v2.jar=lib\\jbox2d-library-2.1.2-alpha-v2.jar
 file.reference.jinput.jar=lib\\jinput.jar
+file.reference.jogg-0.0.7.jar=lib\\jogg-0.0.7.jar
+file.reference.jorbis-0.0.15.jar=lib\\jorbis-0.0.15.jar
 file.reference.lwjgl.jar-1=lib\\lwjgl.jar
-file.reference.natives-win32.jar=lib\\natives-win32.jar
 file.reference.slick.jar-1=lib\\slick.jar
 file.reference.TWL.jar=lib\\TWL.jar
 file.reference.xpp3-1.1.4c.jar=lib\\xpp3-1.1.4c.jar
@@ -47,8 +48,9 @@ javac.classpath=\
     ${file.reference.jbox2d-library-2.1.2-alpha-v2.jar}:\
     ${file.reference.TWL.jar}:\
     ${file.reference.xpp3-1.1.4c.jar}:\
-    ${file.reference.natives-win32.jar}:\
-    ${file.reference.jinput.jar}
+    ${file.reference.jinput.jar}:\
+    ${file.reference.jogg-0.0.7.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -93,7 +95,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms32m -Djava.library.path=lib/natives-win32
+run.jvmargs=-Xms32m
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
