--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,10 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 ant.customtasks.libs=JWSAntTasks
+application.desc=Carne Carne: A game of untold adventure and daring feats of awesome
+application.splash=\\\\home4\\dare\\Homedrives\\A203945\\CarneCarne\\splashLogo.png
 application.title=CarneCarne
-application.vendor=aaron
+application.vendor=A Necessary Evil
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -76,17 +78,18 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=local
+jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
+jnlp.codebase.user=
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.icon=M:\\CarneCarne\\hat.png
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
+jnlp.signed=true
+jnlp.signing=generated
+jnlp.signing.alias=taco
+jnlp.signing.keystore=\\\\home4\\dare\\Homedrives\\A203945\\CarneCarne\\nb-jws.ks
 main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -95,7 +98,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms32m
+run.jvmargs=-Xms32m -Djava.library.path=lib/natives-win32
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
