--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,10 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Slick Testbed.jar
+dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${file.reference.javaws.jar}
 excludes=
 file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
@@ -80,16 +81,16 @@ javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
-jnlp.codebase.user=
+jnlp.codebase.user=https://sites.google.com/site/carnecarne2011/game
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.icon=M:\\CarneCarne\\hat.png
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
 jnlp.signed=true
-jnlp.signing=generated
-jnlp.signing.alias=taco
-jnlp.signing.keystore=\\\\home4\\dare\\Homedrives\\A203945\\CarneCarne\\nb-jws.ks
+jnlp.signing=key
+jnlp.signing.alias=anecessaryevil
+jnlp.signing.keystore=D:\\carnecarne\\anecessaryevilkeystore
 main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
