--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,9 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${file.reference.javaws.jar}
+endorsed.classpath=
 excludes=
+file.reference.getdown-tools-1.2.jar=lib\\getdown-tools-1.2.jar
 file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
 file.reference.jbox2d-library-2.1.2-alpha-v2.jar=lib\\jbox2d-library-2.1.2-alpha-v2.jar
@@ -53,7 +53,8 @@ javac.classpath=\
     ${file.reference.xpp3-1.1.4c.jar}:\
     ${file.reference.jinput.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
-    ${file.reference.jorbis-0.0.15.jar}
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.getdown-tools-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,7 +84,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=https://sites.google.com/site/carnecarne2011/game
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.icon=M:\\CarneCarne\\hat.png
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
