Tried to implment the paralax :(

--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
 	
 	<target name="-post-clean">
 		<taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask"
-         classpath="${lib.dir}/getdown-tools.jar"/>
+         classpath="${lib.dir}/getdown-tools-1.2.jar"/>
 		<digest appdir="${dist.dir}"/>
 	</target>
 		
