--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,8 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${file.reference.javaws.jar}
 excludes=
 file.reference.getdown-tools-1.2.jar=lib\\getdown-tools-1.2.jar
 file.reference.ibxm.jar-1=lib\\ibxm.jar
@@ -84,7 +85,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=https://sites.google.com/site/carnecarne2011/game
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.icon=M:\\CarneCarne\\hat.png
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
