--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -92,7 +92,7 @@ jnlp.offline-allowed=true
 jnlp.signed=true
 jnlp.signing=key
 jnlp.signing.alias=anecessaryevil
-jnlp.signing.keystore=D:\\carnecarne\\anecessaryevilkeystore
+jnlp.signing.keystore=anecessaryevilkeystore
 main.class=main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
