--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -20,6 +20,6 @@ user.properties.file=C:\\Users\\G203947\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\A203945\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\Almax\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\G203947\\.netbeans\\7.0\\build.properties
-user.properties.file=C:\\Users\\A203945\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\Almax\\.netbeans\\7.0\\build.properties
 
 
