--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,7 +81,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=user
+jnlp.codebase.type=local
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=https://sites.google.com/site/carnecarne2011/game
 jnlp.descriptor=application
