Fixed every outstanding bug and level design flaw

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,7 +100,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms1024m -Djava.library.path=lib/natives-win32
+run.jvmargs=-Xms1024m -Djava.library.path=lib/natives-linux
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
