--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -19,8 +19,6 @@ user.properties.file=C:\\Users\\G203947\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\G203947\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\A203945\\.netbeans\\7.0\\build.properties
 user.properties.file=C:\\Users\\Almax\\.netbeans\\7.0\\build.properties
-<<<<<<< HEAD
-user.properties.file=C:\\Users\\A203946\\.netbeans\\7.0\\build.properties
-=======
-user.properties.file=C:\\Users\\A203945\\.netbeans\\7.0\\build.properties
->>>>>>> 6fe157d03dcb17343d9be74e60a6823de732971c
+user.properties.file=/home/graehu/.netbeans/7.0/build.properties
+
+
