--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -98,7 +98,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms1024m -Djava.library.path=lib/natives-linux
+run.jvmargs=-Xms1024m -Djava.library.path=lib/natives-win32
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
