Added toggles in sGraphicsManager for lighting and shaders

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,7 @@ file.reference.slick.jar-1=lib\\slick.jar
 file.reference.xpp3-1.1.4c.jar=lib\\xpp3-1.1.4c.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
+jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
