--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 		<delete dir="${dist.dir}/assets" />
 	</target>
 	
-<!--	<target name="-post-jar">
+	<target name="-post-jar">
 	
 		<copy todir="${dist.dir}" file="getdown/getdown.txt"/>
 		
@@ -51,7 +51,7 @@
 		
 		<digest appdir="${dist.dir}" keystore="anecessaryevilkeystore" storepass="tacoTACO" alias="anecessaryevil"/>
 		
-	</target>-->
+	</target>
 		
     <!--
 
