Fireworks and winner/loser display

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${file.reference.javaws.jar}
+endorsed.classpath=
 excludes=
 file.reference.getdown-tools-1.2.jar=lib\\getdown-tools-1.2.jar
 file.reference.ibxm.jar-1=lib\\ibxm.jar
@@ -83,7 +82,7 @@ jnlp.codebase.type=local
 jnlp.codebase.url=$$$$codebase
 jnlp.codebase.user=https://sites.google.com/site/carnecarne2011/game
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.icon=
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
