--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,11 +32,12 @@ excludes=
 file.reference.getdown-tools-1.2.jar=lib\\getdown-tools-1.2.jar
 file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
-file.reference.jbox2d-library-2.1.2-alpha-v2.jar=lib\\jbox2d-library-2.1.2-alpha-v2.jar
+file.reference.jbox2d-library-2.1.2.1-SNAPSHOT.jar=lib\\jbox2d-library-2.1.2.1-SNAPSHOT.jar
 file.reference.jinput.jar=lib\\jinput.jar
 file.reference.jogg-0.0.7.jar=lib\\jogg-0.0.7.jar
 file.reference.jorbis-0.0.15.jar=lib\\jorbis-0.0.15.jar
 file.reference.lwjgl.jar-1=lib\\lwjgl.jar
+file.reference.slf4j-api-1.6.1.jar=lib\\slf4j-api-1.6.1.jar
 file.reference.slick.jar-1=lib\\slick.jar
 file.reference.xpp3-1.1.4c.jar=lib\\xpp3-1.1.4c.jar
 includes=**
@@ -47,12 +48,13 @@ javac.classpath=\
     ${file.reference.ibxm.jar-1}:\
     ${file.reference.lwjgl.jar-1}:\
     ${file.reference.slick.jar-1}:\
-    ${file.reference.jbox2d-library-2.1.2-alpha-v2.jar}:\
     ${file.reference.xpp3-1.1.4c.jar}:\
     ${file.reference.jinput.jar}:\
     ${file.reference.jogg-0.0.7.jar}:\
     ${file.reference.jorbis-0.0.15.jar}:\
-    ${file.reference.getdown-tools-1.2.jar}
+    ${file.reference.getdown-tools-1.2.jar}:\
+    ${file.reference.jbox2d-library-2.1.2.1-SNAPSHOT.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -98,7 +100,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms1024m -Djava.library.path=lib/natives-win32
+run.jvmargs=-Xms512m -Djava.library.path=lib/natives-win32
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
