Fixed falling through level and contact crash
Pulled jbox2d r458 and applied fix in r502
Also doubled island body count it's init to avoid index out of bound error

Began implementing tooltip types

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 file.reference.getdown-tools-1.2.jar=lib\\getdown-tools-1.2.jar
 file.reference.ibxm.jar-1=lib\\ibxm.jar
 file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_25\\jre\\lib\\javaws.jar
-file.reference.jbox2d-library-2.1.2.1-SNAPSHOT.jar=lib\\jbox2d-library-2.1.2.1-SNAPSHOT.jar
+file.reference.jbox2d-library-2.1.2_with_contact_fix_.jar=lib\\jbox2d-library-2.1.2(with contact fix).jar
 file.reference.jinput.jar=lib\\jinput.jar
 file.reference.jogg-0.0.7.jar=lib\\jogg-0.0.7.jar
 file.reference.jorbis-0.0.15.jar=lib\\jorbis-0.0.15.jar
@@ -53,8 +53,8 @@ javac.classpath=\
     ${file.reference.jogg-0.0.7.jar}:\
     ${file.reference.jorbis-0.0.15.jar}:\
     ${file.reference.getdown-tools-1.2.jar}:\
-    ${file.reference.jbox2d-library-2.1.2.1-SNAPSHOT.jar}:\
-    ${file.reference.slf4j-api-1.6.1.jar}
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.jbox2d-library-2.1.2_with_contact_fix_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
