--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,11 +100,10 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Xms512m -Djava.library.path=lib/natives-win32
+run.jvmargs=-Xms512m -Djava.library.path=lib/natives
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.data.dir=data
 src.dir=src
 test.src.dir=test
